chore: fix release_test java failures (#5505)